Revision history for Capture-Tiny

{{$NEXT}}

0.42      2016-05-31 12:40:10-04:00 America/New_York

  - No changes from 0.41

0.41      2016-05-23 11:58:15-04:00 America/New_York (TRIAL RELEASE)

  [Fixed]

  - Fixed some failing tests when STDIN is routed to /dev/null

0.40      2016-05-23 11:42:35-04:00 America/New_York

  - No changes from 0.39

0.39      2016-05-02 10:21:48-04:00 America/New_York (TRIAL RELEASE)

  [Fixed]

  - Fix in 0.37 tickled a very obscure regular expressions bug in perl <
    5.18; should now be fixed.

0.37      2016-05-02 07:08:31-04:00 America/New_York (TRIAL RELEASE)

  [Fixed]

  - Skip some tests if locale can't be determined.

0.36      2016-02-28 21:36:57-05:00 America/New_York

  [Docs]

  - Fixed typos.

0.34      2016-02-18 23:26:13-05:00 America/New_York

  [Fixed]

  - Removed spurious JSON::PP dependency added by a broken
    Dist::Zilla plugin.

0.32      2016-02-18 10:12:02-05:00 America/New_York

  [Docs]

  - Changed internal formatting of documentation

  [Changes]

  - No functional changes from 0.31

0.31      2016-02-14 07:33:50-07:00 America/Mazatlan (TRIAL RELEASE)

  [Fixed]

  - Application of layers to handles during and after capture now attempts
    to more accurately duplicate the original layers, including potential
    duplicate layers.  Because of the unusual ways that layers are ordered
    and applied, exact duplication is not guaranteeed, but this should be
    better that what Capture::Tiny did before.

  - Avoids a hard crash on Windows with Perl < 5.20 if a fork occurs in a
    capture block.  Also documented the risks and lack of support for
    forks in capture blocks.

0.30      2015-05-15 20:43:54-04:00 America/New_York

  No changes from 0.29

0.29      2015-04-19 18:36:24+02:00 Europe/Berlin (TRIAL RELEASE)

  Fixed:

  - Fix double filehandle close error with tee on Windows
    (which started warning during the perl 5.21.x series,
    causing tests to fail)
